Fix rb_interned_str: create strings with BINARY (akak ASCII_8BIT) encoding

[Bug #21842]

The documentation always stated as much, and it's consistent with the
rb_str_* family of functions.