ext/io/console/extconf.rb
@@ -9,7 +9,7 @@ have_func("rb_syserr_fail_str(0, Qnil)") or
 have_func("rb_syserr_new_str(0, Qnil)") or
   abort
 
-have_func("rb_interned_str_cstr")
+have_func("rb_enc_interned_str_cstr")
 have_func("rb_io_path", "ruby/io.h")
 have_func("rb_io_descriptor", "ruby/io.h")
 have_func("rb_io_get_write_io", "ruby/io.h")
